--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Random Content Button",
     "version": "1.0.1",
-    "description": "Opens a random link from a list, created for use on xQc's stream.",
+    "description": "Open random content to stay entertained!",
     "manifest_version": 3,
     "author": "funbox1111",
     "icons": {
