Add content button to right click menu, organize code, improve dev
credit to u/PVC_Fan for the right click menu idea :)

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,8 +13,12 @@
         "default_popup": "index.html",
         "default_title": "Random Content Button"
     },
+    "background": {
+        "service_worker": "background.js"
+    },
     "permissions": [
         "storage",
-        "unlimitedStorage"
+        "unlimitedStorage",
+        "contextMenus"
     ]
 }
